--- a/src/main/resources/application.template.properties
+++ b/src/main/resources/application.template.properties
@@ -4,7 +4,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
 spring.datasource.url=URL
 spring.datasource.username=NAME
 spring.datasource.password=PASS
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=
