--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,26 @@
 			<version>2.0.2</version>
 		</dependency>
 
+		<!-- Keycloak -->
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>19.0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-admin-client</artifactId>
+			<version>19.0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+			<version>5.18.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
