--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
 			<version>21.0.1</version>
 		</dependency>
 
+		<!-- Open Food Facts -->
+		<dependency>
+			<groupId>pl.coderion</groupId>
+			<artifactId>openfoodfacts-java-wrapper</artifactId>
+			<version>0.9.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
